Stops you from dropping your pick on death and loosing it when you respawn.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: PyrexNoPickaxeDrop
+name: NoPickaxeDrop
 version: '${project.version}'
 main: me.lunaiskey.pyrex.nopickdrop.NoPickDrop
 api-version: 1.17
 authors: [ Lunaiskey ]
-description: Made for PyrexMC.
+description: Stops you from dropping your diamond pickaxe.
