--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.lunaiskey</groupId>
-    <artifactId>pyrexnopickdrop</artifactId>
+    <artifactId>NoDropPick</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Pyrexnopickdrop</name>
+    <name>NoPickDrop</name>
 
     <description>stops you from dropping any pickaxes</description>
     <properties>
